--- a/pages/mainPage.html
+++ b/pages/mainPage.html
@@ -1,13 +1,10 @@
-<html lang="en">
-<html manifest="IGNORE.manifest">
-
-</html>
+<html lang="en" manifest="IGNORE.manifest">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <title>Document</title>
+    <title>美丽中国100</title>
     <link rel="stylesheet" href="https://cdn.staticfile.org/font-awesome/4.7.0/css/font-awesome.css">
     <script src="./../mainPage.js"></script>
 </head>
@@ -54,7 +51,7 @@
             </p>
         </div>
         <div class="footArea">
-            
+
         </div>
     </div>
     <div class="canvasContainer">
